  - Remove Message::Passing::Redis::Types - types we need are
    now in the core Message::Passing type library.

0.004
  - Allow a string for a single topic, rather than forcing a list
    of one item in Message::Passing::Input::Redis

  - Support subscription to patterns of topics in
    Message::Passing::Input::Redis using 'ptopics' attribute.

0.003
  - Add some documentation.

0.002
  - Deal with changes in upstream Message::Passing

0.001
  - Initial barely working version.
