@@ -2,10 +2,16 @@ package Message::Passing::Redis::Role::HasAConnection;
 use Moose::Role;
 use namespace::autoclean;
 
-has server => (
+has hostname => (
     is => 'ro',
     isa => 'Str',
-    default => '127.0.0.1:6379',
+    required => 1,
+);
+
+has port => (
+    is => 'ro',
+    isa => 'Int',
+    default => 6379,
 );
 
 with 'Message::Passing::Role::HasAConnection';
@@ -13,7 +19,7 @@ use Message::Passing::Redis::ConnectionManager;
 sub _build_connection_manager {
     my $self = shift;
     Message::Passing::Redis::ConnectionManager->new(map { $_ => $self->$_() }
-        qw/ server /
+        qw/ hostname port /
     );
 }
 
