@@ -9,6 +9,7 @@ use Message::Passing::Output::Test;
 
 my $cv = AnyEvent->condvar;
 my $input = Message::Passing::Input::Redis->new(
+    hostname => "127.0.0.1",
     topics => "log_stash.test",
     output_to => Message::Passing::Output::Test->new(
         cb => sub { $cv->send }
@@ -17,6 +18,7 @@ my $input = Message::Passing::Input::Redis->new(
 
 my $output = Message::Passing::Output::Redis->new(
     topic => "log_stash.test",
+    hostname => "127.0.0.1",
 );
 
 my $this_cv = AnyEvent->condvar;
@@ -33,6 +35,7 @@ is_deeply([$input->output_to->messages], ['bar']);
 
 my $other_output = Message::Passing::Output::Redis->new(
     topic => "log_stash.foo",
+    hostname => "127.0.0.1",
 );
 
 $cv = AnyEvent->condvar;
@@ -41,6 +44,7 @@ my $other_input = Message::Passing::Input::Redis->new(
     output_to => Message::Passing::Output::Test->new(
         cb => sub { $cv->send }
     ),
+    hostname => "127.0.0.1",
 );
 
 $this_cv = AnyEvent->condvar;
@@ -49,6 +53,11 @@ $timer = AnyEvent->timer(after => 2, cb => sub {
     $this_cv->send;
 });
 $this_cv->recv;
+$timer = AnyEvent->timer(after => 10, cb => sub {
+    undef $timer;
+    fail "Timed out";
+    $cv->throw;
+});
 $output->consume('quux');
 $other_output->consume('fnord');
 $cv->recv;
